Small addition for :hint, and fixed a invalid ERB-snippet.

--- a/info.plist
+++ b/info.plist
@@ -187,10 +187,12 @@
 		<string>DBA6619C-BA57-489E-BA91-F6D48C8DE6F8</string>
 		<string>48D3B959-894F-4A69-9F9B-29234482B5E5</string>
 		<string>011AEC7B-5ED6-4CBF-9C10-303BFFCC5788</string>
+		<string>FE80BBB7-7068-4108-9AB9-67C777FC9EAC</string>
 		<string>1B24D394-999C-40D4-827B-D01B289996B3</string>
 		<string>59E6149B-1E46-4CBF-AA4B-E4498C98A9D5</string>
 		<string>2FB4707E-DCD5-4B2F-8CC8-C9503114336F</string>
 		<string>3AF44C98-E7E8-4791-9796-57C0F4B3C3E9</string>
+		<string>A72081DA-DD28-47DC-B74B-39655F856DA0</string>
 	</array>
 	<key>uuid</key>
 	<string>E2D6524E-C968-4E71-874C-F2A9992B8730</string>
